2009-11-21  Raul Mateos  <raulofpandora@gmail.com>

	* godmode/alerts/alert_list.php, operation/events/events.php,
	operation/snmpconsole/snmp_view.php: Use down icon instead wand icon, 
	due to wand is reserved for creation purposes.

	* godmode/agentes/module_manager_editor.php: Added header and down icon.

2009-11-21  Raul Mateos  <raulofpandora@gmail.com>

	* extensions/*.php: Changed title for all extensions, improving common
	apparence. By the way... It's my brithday!!!

2009-11-19  Miguel de Dios <miguel.dedios@artica.es>

	* include/functions.php: change the "safe_input" for estandarize the input
	and clean bugs for this cause. Now Pandora Console depends of 5.2.3 PHP
	version or up.
	* extensions/dbmanager.php: change the source code to use correctly the
	"safe_input".

2009-11-19  Miguel de Dios <miguel.dedios@artica.es>

	* godmode/modules/manage_network_components_form_plugin.php: tiny fix in the
	size of field "plugin_parameter".

2009-11-18  Miguel de Dios <miguel.dedios@artica.es>

	* operation/agentes/exportdata.php: change "search_agents" in the ajax, now
	you can add paramater "add" as array json with the names of agents or other
	things that you want show in the box of result.
	* operation/events/events.php: change the select box for a ajax autocomplete
	box for agent form filter.

2009-11-16  Miguel de Dios <miguel.dedios@artica.es>

	* godmode/reporting/reporting_builder.php,
	godmode/reporting/graph_builder.php, godmode/alerts/alert_list.php: fix the
	bug that show the modules "pending delete" in more select box in some forms.
	Fixes: 2894921

2009-11-12  Miguel de Dios <miguel.dedios@artica.es>

	* godmode/db/db_sanity.php: fix typo error there was one "zero" more in
	query SQL.
	Fixes: 2895298

2009-11-12  Sancho lerena <slerena@artica.es>

	* include/help/en/help_web_checks.php: Added missing help.

	* include/help/en/help_alert_macros.php: Added missing macros.

2009-11-11  Miguel de Dios <miguel.dedios@artica.es>
