@@ -501,7 +501,7 @@ $table->data[0][1] = print_select ($modules, 'id_agent_module', 0, true,
 $table->data[0][1] .= ' <span id="latest_value" class="invisible">'.__('Latest value').': ';
 $table->data[0][1] .= '<span id="value">&nbsp;</span></span>';
 $table->data[0][1] .= ' <span id="module_loading" class="invisible">';
-$table->data[0][1] .= '<img src="images/spinner.gif" /></span>';
+$table->data[0][1] .= '<img src="images/spinner.png" /></span>';
 
 $table->data[1][0] = __('Template');
 $templates = get_alert_templates (false, array ('id', 'name'));
@@ -517,7 +517,7 @@ $actions = array ('0' => __('None'));
 $table->data[2][1] = '<div class="actions_container">';
 $table->data[2][1] = print_select($actions,'action_select','','','','',true);
 $table->data[2][1] .= ' <span id="action_loading" class="invisible">';
-$table->data[2][1] .= '<img src="images/spinner.gif" /></span>';
+$table->data[2][1] .= '<img src="images/spinner.png" /></span>';
 $table->data[2][1] .= ' <span id="advanced_action" class="advanced_actions invisible">';
 $table->data[2][1] .=  __('From').' ';
 $table->data[2][1] .= print_input_text ('fires_min', '', '', 4, 10, true);
