@@ -1,3 +1,12 @@
+2009-11-22  Raul Mateos  <raulofpandora@gmail.com>
+
+	* images/spinner.png, images/background-li.png: New images converted
+	from gif.
+
+	* *.php: Changed several files from spinner.gif to spinner.png.
+
+	* extensions/update_manager/settings.php: Changed header.
+
 2009-11-21  Raul Mateos  <raulofpandora@gmail.com>
 
 	* godmode/alerts/alert_list.php, operation/events/events.php,
